@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.2-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-02 20:35:25, took 00:12:41, with 50 workers, on 4130 cases, 0 failed, 0 traces, 2 retries
+-;-;-;2026-01-02 21:04:50, took 00:13:06, with 50 workers, on 4132 cases, 0 failed, 0 traces, 7 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -94,6 +94,8 @@ http://sources.freertr.org/cfg/conn-dlsw12.tst;conn-dlsw12.tst;success;vlan tunn
 http://sources.freertr.org/cfg/conn-dlsw13.tst;conn-dlsw13.tst;success;tunnel interface with dlsw
 http://sources.freertr.org/cfg/conn-dvbgse01.tst;conn-dvbgse01.tst;success;dvbgse without fragmentation
 http://sources.freertr.org/cfg/conn-dvbgse02.tst;conn-dvbgse02.tst;success;dvbgse with fragmentation
+http://sources.freertr.org/cfg/conn-dvbgse03.tst;conn-dvbgse03.tst;success;dvbgse without baseband
+http://sources.freertr.org/cfg/conn-dvbgse04.tst;conn-dvbgse04.tst;success;dvbgse with baseband
 http://sources.freertr.org/cfg/conn-eoip01.tst;conn-eoip01.tst;success;eoip over ipv4
 http://sources.freertr.org/cfg/conn-eoip02.tst;conn-eoip02.tst;success;eoip over ipv6
 http://sources.freertr.org/cfg/conn-eoip03.tst;conn-eoip03.tst;success;eoip over loopback
