@@ -90,6 +90,8 @@ qc pass: vlan tunneling with dlsw
 qc pass: tunnel interface with dlsw
 qc pass: dvbgse without fragmentation
 qc pass: dvbgse with fragmentation
+qc pass: dvbgse without baseband
+qc pass: dvbgse with baseband
 qc pass: eoip over ipv4
 qc pass: eoip over ipv6
 qc pass: eoip over loopback
