@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.2-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-02 20:35:25, took 00:12:41, with 50 workers, on 4130 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2026-01-02 21:04:50, took 00:13:06, with 50 workers, on 4132 cases, 0 failed, 0 traces, 7 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -106,6 +106,8 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dlsw13.tst">conn-dlsw13.tst</a></td><td>success</td><td>tunnel interface with dlsw</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dvbgse01.tst">conn-dvbgse01.tst</a></td><td>success</td><td>dvbgse without fragmentation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-dvbgse02.tst">conn-dvbgse02.tst</a></td><td>success</td><td>dvbgse with fragmentation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-dvbgse03.tst">conn-dvbgse03.tst</a></td><td>success</td><td>dvbgse without baseband</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-dvbgse04.tst">conn-dvbgse04.tst</a></td><td>success</td><td>dvbgse with baseband</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-eoip01.tst">conn-eoip01.tst</a></td><td>success</td><td>eoip over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-eoip02.tst">conn-eoip02.tst</a></td><td>success</td><td>eoip over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-eoip03.tst">conn-eoip03.tst</a></td><td>success</td><td>eoip over loopback</td></tr>
