@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.2-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-02 20:47:21, took 00:11:25, with 50 workers, on 857 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2026-01-02 21:15:34, took 00:10:15, with 50 workers, on 857 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
